samples/_failures_safe/1761500400_996e1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4791c7b6.c: In function ‘process_event’:
./samples/SAFE/__tmp_4791c7b6.c:172:5: error: expected expression at end of input
  172 |     if (sm == NULL || tt ==
      |     ^~
./samples/SAFE/__tmp_4791c7b6.c:172:5: error: expected declaration or statement at end of input
